--- a/projects.css
+++ b/projects.css
@@ -90,3 +90,53 @@ body {
     font-size: 16px;
     margin: 0;
   }
+
+
+
+  
+  .container {
+    max-width: 1130px;
+    margin: auto;
+  }
+  
+  .section {
+    display: grid;
+    grid-template-columns: 40px auto 300px;
+    gap: 20px;
+    margin-bottom: 40px;
+    align-items: end;
+    position: relative;
+  }
+  
+  .section.full-width {
+    grid-template-columns: 40px auto;
+  }
+  
+  .vertical-title {
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    font-family: 'Marcellus', serif;
+    font-size: 2em;
+    color: #555;
+    padding-top: 10px;
+    border-left: 2px solid #ddd;
+  }
+  
+  .content {
+    font-size: 1em;
+    line-height: 1.5;
+    color: #333;
+    font-family: 'inter', sans-serif;
+  }
+  
+  .image-container {
+    grid-row: span 2; /* zorgt ervoor dat de afbeelding twee secties hoog is */
+    height: 100%;
+  }
+  
+  .side-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
