--- a/navbar.css
+++ b/navbar.css
@@ -7,13 +7,19 @@
     background-color: #FCF4E9;
     font-family: 'Marcellus', serif;
     padding: 0 20px; /* voeg wat padding links/rechts toe voor ruimte */
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
     box-shadow: 0px -3px 16px rgba(0,0,0,0.2);
     z-index: 3;
 
 }
 
-
+.hero-wrapper{
+    margin-top: 60px;
+}
 /* wrapper voor items rechts */
 .nav-links {
     display: flex;
